app-server/template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: A basic CloudFormation templates

Resources:
  DevSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP access
      VpcId: vpc-0414f0d0af6f69f06 # Replace with your VPC ID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 # Allows SSH from anywhere (modify for security)
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0 # Allows HTTP from anywhere

  devlmsappserver:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-076c6dbba59aa92e6
      SecurityGroupIds:
        - !Ref DevSecurityGroup # Attach the security group
      SubnetId: subnet-0d715390879b9fcba # Replace with your subnet ID
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Update and install necessary packages
          yum update -y
          yum install -y git

          # Install Node.js (use a more up-to-date method if needed)
          curl -fsSL https://rpm.nodesource.com/setup_16.x | sudo bash -
          yum install -y nodejs

          # Clone your project repository
          git clone https://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@github.com/ranjith-kamaraj/HG-LMS-APP.git /home/ec2-user/HG-LMS-APP

          # Navigate to your project directory
          cd /home/ec2-user/HG-LMS-APP/app-server

          npm install -g ts-node nodemon

          # Install project dependencies
          npm install

          # Set environment variable
          echo "PORT=5000" > /home/ec2-user/HG-LMS-APP/app-server/.env
          chown ec2-user:ec2-user /home/ec2-user/HG-LMS-APP/app-server/.env

          # Start your application (adjust the command as needed)
          npm start
